// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module renders with expected standard props 1`] = `
<div
  className="repository--module-icon is-not-open"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <button
    onClick={[Function]}
  >
    <div
      className="repository--module-icon--image"
    >
      <svg
        version="1.1"
        viewBox="0 0 130 150"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <pattern
            dangerouslySetInnerHTML={
              Object {
                "__html": "<image xlink:href=\\"/library/module-icon/mockDraftId\\" width=\\"150\\" height=\\"150\\" />",
              }
            }
            height="150"
            id="module-img-id-mockDraftId"
            patternUnits="userSpaceOnUse"
            width="150"
          />
        </defs>
        <path
          d="M56.29165124598851 4.999999999999999Q64.9519052838329 0 73.61215932167728 4.999999999999999L121.24355652982142 32.5Q129.9038105676658 37.5 129.9038105676658 47.5L129.9038105676658 102.5Q129.9038105676658 112.5 121.24355652982142 117.5L73.61215932167728 145Q64.9519052838329 150 56.29165124598851 145L8.660254037844387 117.5Q0 112.5 0 102.5L0 47.5Q0 37.5 8.660254037844387 32.5Z"
          fill="url(#module-img-id-mockDraftId)"
        />
      </svg>
    </div>
    <div
      className="repository--module-icon--menu-control-button"
    >
      <svg
        height="32px"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </button>
</div>
`;

exports[`Module renders with expected standard props but hasMenu=false 1`] = `
<div
  className="repository--module-icon is-not-open"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <a
    href="/library/mockDraftId"
  >
    <div
      className="repository--module-icon--image"
    >
      <svg
        version="1.1"
        viewBox="0 0 130 150"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <pattern
            dangerouslySetInnerHTML={
              Object {
                "__html": "<image xlink:href=\\"/library/module-icon/mockDraftId\\" width=\\"150\\" height=\\"150\\" />",
              }
            }
            height="150"
            id="module-img-id-mockDraftId"
            patternUnits="userSpaceOnUse"
            width="150"
          />
        </defs>
        <path
          d="M56.29165124598851 4.999999999999999Q64.9519052838329 0 73.61215932167728 4.999999999999999L121.24355652982142 32.5Q129.9038105676658 37.5 129.9038105676658 47.5L129.9038105676658 102.5Q129.9038105676658 112.5 121.24355652982142 117.5L73.61215932167728 145Q64.9519052838329 150 56.29165124598851 145L8.660254037844387 117.5Q0 112.5 0 102.5L0 47.5Q0 37.5 8.660254037844387 32.5Z"
          fill="url(#module-img-id-mockDraftId)"
        />
      </svg>
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </a>
</div>
`;
